# Agentic-Gold-Trader

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
agent/: fundamental_agent.py  journalist_agent.py  market_sentiment_agent.py  oi_analyst_agent.py  retail_sentiment_agent.py  strategist_agent.py  technical_analyst_agent.py
graph/: workflow.py
notebook/: experiment.ipynb
src/: fetch_mt5_data.py  firecrawl.py  models.py  prompt.py
test/: test_fundamental_agent.py  test_oi_analyst_agent.py  test_retail_sentiment_agent.py  test_technical_agent.py
trading_journal_rag/: process_documents.py  rag_setup.py  vector_db_manager.py
trading_journal_rag/knowledge_base/: constitution.json  system_health.json  trading_log_seed.json
